--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,1 @@
-<div class="container">
-
-  <h1> prueva potter</h1>
-
-  <div class="card-columns">
-
-    <div class="card" *ngFor=" let estudiante of estudiantes;
-     let par=even;
-      let impar=odd" >
-
-      <img [src]="estudiante.image" class="card-img-top" alt="...">
-      <div class="card-body" [ngClass]="{'bg-success':par, 'bg-primary':impar}">
-        <h3 class="card-title">{{estudiante.name}}</h3>
-        <p class="card-text">{{estudiante.id}}</p>
-        <p class="card-text">{{estudiante.species}}</p>
-        <p class="card-text">{{estudiante.gender}}</p>
-        <p class="card-text">{{estudiante.house}}</p>
-        <p class="card-text">{{estudiante.dateOfBirth}}</p>
-        <p class="card-text">{{estudiante.patronus}}</p>
-        <p class="card-text">{{estudiante.live}}</p>
-      </div>
-    </div>
-
-  </div>
-
-</div>
+<app-estudiantes></app-estudiantes>
